[gd_scene load_steps=11 format=3 uid="uid://2oqfqxx5b61g"]

[ext_resource type="Script" uid="uid://c767kqehm52q6" path="res://robot.gd" id="1_7k104"]
[ext_resource type="Texture2D" uid="uid://dw87yblp8f437" path="res://industrial.v2.png" id="2_dfm56"]
[ext_resource type="Script" uid="uid://c64i3slnxy0wk" path="res://shield.gd" id="3_shield"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(83, 97)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhfw1"]
atlas = ExtResource("2_dfm56")
region = Rect2(0, 400, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru5oq"]
atlas = ExtResource("2_dfm56")
region = Rect2(16, 400, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xofo"]
atlas = ExtResource("2_dfm56")
region = Rect2(32, 400, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyxj1"]
atlas = ExtResource("2_dfm56")
region = Rect2(48, 400, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bkaji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhfw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru5oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xofo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyxj1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfm56"]
size = Vector2(14, 126)

[node name="robot" type="CharacterBody2D" groups=["robot-friend"]]
script = ExtResource("1_7k104")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(29.5, 30.5)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(29.5, 31.000002)
scale = Vector2(5.9375, 6.125)
sprite_frames = SubResource("SpriteFrames_bkaji")
frame = 2
frame_progress = 0.6679723

[node name="shield" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("3_shield")

[node name="CollisionShape2D" type="CollisionShape2D" parent="shield"]
position = Vector2(85, 17)
shape = SubResource("RectangleShape2D_dfm56")

[node name="ColorRect" type="ColorRect" parent="shield"]
offset_left = 78.0
offset_top = -47.0
offset_right = 92.0
offset_bottom = 78.0
color = Color(0.32941177, 1, 1, 0.34117648)

[connection signal="area_entered" from="shield" to="shield" method="_on_area_entered"]
[connection signal="body_entered" from="shield" to="shield" method="_on_body_entered"]
